fixed signup level on smaller devices

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -659,3 +659,13 @@ position: static;
 
 
 
+@media screen and (min-width: 768px) and  (max-width: 900px) {
+  .email-container {
+    height: 225px;
+    margin-top: -100px;
+  }
+}
+
+
+
+
